test-data/unit/check-python310.test
[case testMatchStatementNotSupported]
# flags: --python-version 3.10
match str():  # E: Match statement is not supported
    case 'x':
        1 + ''
    case _:
        1 + b''
